re #656 fixed misaligned toggleswitches

--- a/newsrc/code/media/com_acctexp/css/toggleswitch/toggleswitch.css
+++ b/newsrc/code/media/com_acctexp/css/toggleswitch/toggleswitch.css
@@ -1,7 +1,7 @@
 /* https://github.com/entropillc/css3-toggleswitch modified */
 
 div.toggleswitch {
-  margin-top: 4px;
+  margin-top: 3px !important;
 }
 
 .toggleswitch {
